# r2d2_ros2

r2d2_ws/ROS/install/: local_setup.sh  setup.sh
r2d2_ws/ROS/install/r2d2_sim/lib/r2d2_sim/: robot_controller
r2d2_ws/ROS/install/r2d2_sim/share/r2d2_sim/: package.bash  package.dsv  package.sh  package.xml  package.zsh
r2d2_ws/ROS/install/r2d2_sim/share/r2d2_sim/models/r2d2models/: r2d2.xacro.urdf
r2d2_ws/ROS/log/: latest_build
r2d2_ws/ROS/src/r2d2_sim/: setup.cfg  setup.py
r2d2_ws/ROS/src/r2d2_sim/config/: diff_drive_controller.yaml
r2d2_ws/ROS/src/r2d2_sim/launch/: r2d2.launch.py
r2d2_ws/ROS/src/r2d2_sim/models/r2d2models/: model.sdf
r2d2_ws/ROS/src/r2d2_sim/r2d2_sim/: robot_controller.py
r2d2_ws/r2d2_ws/ROS/install/: local_setup.sh  setup.sh
r2d2_ws/r2d2_ws/ROS/install/r2d2_sim/share/r2d2_sim/: package.ps1  package.sh
r2d2_ws/r2d2_ws/ROS/install/r2d2_sim/share/r2d2_sim/launch/: turtle_gz.launch.py
r2d2_ws/r2d2_ws/ROS/install/r2d2_sim/share/r2d2_sim/models/r2d2m/: model.config  model.sdf  r2d2.sdf
r2d2_ws/r2d2_ws/ROS/install/r2d2_sim/share/r2d2_sim/models/r2d2models/: model.sdf
r2d2_ws/r2d2_ws/ROS/log/: latest_build
r2d2_ws/r2d2_ws/ROS/src/r2d2_sim/: SystemFlow.puml  package.xml  setup.py
r2d2_ws/r2d2_ws/ROS/src/r2d2_sim/launch/: r2d2.launch.py
r2d2_ws/r2d2_ws/ROS/src/r2d2_sim/models/r2d2models/: model.config  r2d2.sdf
